@@ -2507,6 +2507,8 @@ mb.azmustclose.text=Azureus must quit due to a problem (re)starting azureus that
 network.ipv6.prefer.addresses=Prefer IPv6 addresses when both IPv6 and IPv4 are available
 DHTView.title.full_v6=Distributed Database IPv6
 
+network.ltep.enabled=Enable experimental extension protocol support (restart required)
+
 ConfigView.pluginlist.loadSelected=Load Selected
 
 SpeedView.stats.asn=Network:
