@@ -225,6 +225,8 @@ public class ConfigSectionConnectionAdvanced implements UISWTConfigSection {
 		
 		new BooleanParameter( cSection, "IPV6 Prefer Addresses", "network.ipv6.prefer.addresses"  );
 		
+		new BooleanParameter(cSection, "LTEP.enabled", "network.ltep.enabled");
+		
 		//////////////////////////////////////////////////////////////////////////
 
 		return cSection;
